--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: The Third International Workshop on Big Data Reduction
-description: held with 2022 IEEE International Conference on Big Data
+title: The Fourth International Workshop on Big Data Reduction
+description: held with 2023 IEEE International Conference on Big Data
 theme: jekyll-theme-slate
 show_downloads: false
 google_analytics: 280783166
